closes #99 additional code changes for JDK 1.8
Signed-off-by: Christopher Morgan <cmorgan@mercurial-solutions.com>